Add first part of exercise 3

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -896,18 +896,28 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "more_punct = '’‘“”—\\n'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "more_punct = '’‘“”—\\n'\n",
     "for character in more_punct:\n",
     "    lower_paragraph = lower_paragraph.replace(character, ' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -933,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -945,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -971,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -1021,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -1040,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -1053,12 +1063,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to see how it looks like we need to print the lines on it. Then: "
+    "If you want to see how it looks like we need to print the lines on it. \n",
+    "We want to save the striped lines in a list and manipulate the list too, then: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -1169,9 +1180,210 @@
     }
    ],
    "source": [
+    "lst = []\n",
     "for line in article:\n",
+    "    lst.append(line.strip())\n",
     "    print(line)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "original_lst = lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How many words are in part one?\n",
+    "\n",
+    "First let's clean up our article. We will striping all extra white spaces using the strip() and we will remove all possible punctuation to count words. \n",
+    "Maybe you noticed that you can't do `article.strip()` because our article it's not string.\n",
+    "\n",
+    "We will clean the text, and also we will save the words and the count of each word in a dictionary. If you don't know what a dictionary is, go to the documentation [here](https://www.tutorialspoint.com/python/python_dictionary.htm)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Let's create a string with all the punctuation we want to remove to count words.\n",
+    "all_punct = string.punctuation + more_punct "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~’‘“”—\\n'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_punct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for element in lst:\n",
+    "    if element == '':\n",
+    "        lst.remove(element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#no_punct_lst = []\n",
+    "for char in all_punct:  \n",
+    "    for j in range(len(lst)):\n",
+    "            lst[j] = lst[j].replace(char, ' ')        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "count = {}\n",
+    "for line in lst:\n",
+    "    words_line = line.split()\n",
+    "    \n",
+    "    for word in words_line:\n",
+    "        count[word] = count.get(word,0) + 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "total_words = 0\n",
+    "for value in count.values():\n",
+    "    total_words += value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2143"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "w = sum(count.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2143"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
