--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -1244,6 +1244,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First let's remove those empty ('') elements, same idea we used in exercise 2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
@@ -1257,6 +1264,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we replce all the pucntiation characters for a space."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
@@ -1264,7 +1278,6 @@
    },
    "outputs": [],
    "source": [
-    "#no_punct_lst = []\n",
     "for char in all_punct:  \n",
     "    for j in range(len(lst)):\n",
     "            lst[j] = lst[j].replace(char, ' ')        "
@@ -1278,7 +1291,17 @@
    },
    "outputs": [],
    "source": [
+    "#Uncomment this line if you want to see how the list looks like\n",
     "#print(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's use dictionaries\n",
+    "\n",
+    "To do the counting we will use dictionaries, this will allow to count how many words of each kind are in an easy way. We will also use the [get()](https://www.tutorialspoint.com/python/dictionary_get.htm), to do the counting. "
    ]
   },
   {
@@ -1294,7 +1317,14 @@
     "    words_line = line.split()\n",
     "    \n",
     "    for word in words_line:\n",
-    "        count[word] = count.get(word,0) + 1\n"
+    "        count[word] = count.get(word,0) + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we print the dictionary we should have every word as a key and then next to it the value will indicate the amount of it that we have. "
    ]
   },
   {
@@ -1303,9 +1333,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gap': 1, 'coinworthy': 1, 'moms': 1, 'pride': 1, 'asked': 1, 'businesslike': 1, 'saw': 3, 'their': 10, 'Guests': 1, 'Jesse': 2, 'mouthed': 1, 'depictions': 1, 'Dave': 3, 'm': 3, 'entertainers': 1, 'poverty': 1, 'became': 1, 'For': 3, 'imbued': 1, 'sector': 1, 'followed': 1, 'My': 2, '80s': 1, 'long': 4, 'If': 1, 'earrings': 1, 'narrow': 1, 'opening': 1, 'Band': 1, 'lionized': 1, 'spent': 1, 'explained': 1, 'Ta': 1, 'jackets': 1, 'dogs': 1, 'response': 1, 'on': 12, 'stand': 1, 'successful': 1, 'concerts': 1, 'Kansas': 1, 'showing': 1, 'literally': 1, 'shaved': 1, 'many': 1, 'skinned': 1, 'great': 1, '21st': 1, 'stage': 4, 'college': 1, 'of': 58, 'Gentlemen': 1, 'winning': 1, 'down': 2, 'Columbia': 1, 'Georgia': 1, 'Bambaataa': 1, 'justice': 1, 'peril': 1, 'referenced': 1, 'last': 4, 'one': 7, 'tight': 1, 'feet': 2, 'presidential': 2, 'soulful': 1, 'La': 2, 'advantages': 1, 'fountain': 1, 'Beyoncé': 1, 'Three': 1, 'loomed': 1, 'wrong': 1, 'lawn': 1, 'showed': 2, 'singer': 2, 'band': 2, 'to': 41, 'advantage': 1, 'sculpted': 1, 'makeshift': 1, 'Americans': 2, 'looking': 1, 'women': 2, 'name': 1, 'voted': 1, 'Rose': 1, 'seemed': 3, 'social': 1, 'raised': 1, 'anyway': 1, 'initiatives': 1, 'Black': 2, 'might': 1, 'welfare': 2, 'After': 2, 'ensued': 1, 'rotten': 1, 'better': 1, 'world': 3, 'magazines': 1, 'brisker': 1, 'Look': 2, 'Naomi': 1, 'motto': 1, '6': 1, 'Against': 1, 'led': 1, 'sides': 1, 'East': 1, 'song': 2, 'Ramadan': 1, 'Bronx': 1, 'throwing': 2, 'primarily': 1, 'preceding': 1, 'By': 2, 'cards': 2, 'Eagle': 1, 'YOU': 1, 'holders': 2, 'fellow': 1, 'over': 2, 'Treasury': 1, 'Cutting': 1, 'statement': 1, 'spend': 1, 'scandal': 1, 'govern': 1, 'York': 1, 'limits': 1, 'same': 1, 'fire': 1, 'Busta': 1, 'orange': 1, 'Before': 1, 'insidious': 1, 'specter': 1, 'grown': 1, 'presented': 1, 'among': 1, 'stole': 1, 'boarded': 1, 'belonged': 2, 'before': 4, 'None': 1, 'has': 2, 'badge': 7, 'party': 7, 'proud': 1, 'man': 1, 'had': 22, 'out': 4, 'what': 5, 'Swizz': 1, 'me': 1, 'young': 1, 'lifted': 1, 'few': 2, 'leader': 1, 'give': 1, 'They': 8, 'looked': 1, 'proper': 1, 'music': 1, 'Mavis': 1, 'could': 1, 'President': 2, 'series': 1, 'dropped': 1, 'Building': 1, 'merely': 1, 'gorgeous': 1, 'pathology': 1, 'moved': 1, 'You': 2, 'dismissed': 1, 'make': 2, 'no': 6, 'October': 4, 'happen': 1, 'by': 8, 'were': 13, 'top': 1, 'Moreover': 1, 'wing': 1, 'chivalrously': 1, 'watched': 1, 'which': 1, 'go': 2, 'gospel': 1, 'hecklers': 1, 'dreads': 1, 'cuffed': 1, 'sockless': 1, 'address': 1, 'more': 3, 'criticized': 1, 'inaugurating': 1, 'behind': 1, 'musical': 1, 'Obama': 19, 'stretched': 1, 'Coates': 1, 'crisp': 1, 'each': 1, 'exclusively': 1, 'power': 4, 'community': 1, 'pompadour': 1, 'wait': 1, 'should': 1, 'mean': 1, 'using': 1, 'office': 2, '55': 1, 'grand': 1, 'election': 1, 'coats': 1, 'draws': 2, 'home': 1, 'finding': 1, 'wanted': 1, 'ensured': 1, 'checked': 1, 'nothing': 1, 'ranks': 1, 'Together': 2, 'months': 1, 'playing': 1, 'she': 2, 'states': 1, 'WILL': 1, 'bus': 1, 'have': 4, 'waning': 1, 'Now': 2, 'like': 7, 'keeping': 1, 'turned': 1, 'pocket': 1, 'got': 2, 'Orlando': 1, 'flash': 1, 'tell': 1, 'bounce': 1, 'Bennett': 1, 'Outstanding': 1, 'stepped': 1, 'handshake': 1, 'at': 14, 'Sinbad': 1, 'promise': 1, 'he': 13, 'decade': 1, 'rock': 1, 'Gatsby': 1, 'generation': 1, 'her': 5, 'tent': 1, 'form': 1, 'unbroken': 2, 'wearing': 1, 'suede': 1, 'rumors': 1, 'House': 10, 'behavior': 1, 'where': 5, 'also': 2, 'Blow': 1, 'expense': 1, 'toward': 1, 'season': 1, 'crown': 1, 'p': 1, 'block': 2, 'unofficially': 1, 'gonna': 3, 'generations': 1, 'criminal': 1, 'evening': 3, 'companion': 1, 'accentuate': 1, 'making': 1, '2008': 2, 'call': 1, 'guest': 1, 'someday': 1, 'your': 2, 'Beatz': 1, 'checking': 1, 'laughter': 1, 'Say': 1, 'graduating': 1, 'She': 2, 'uncle': 1, 'Day': 2, 'certificates': 1, 'number': 1, 'boyish': 1, 'Let': 1, 'bearing': 1, 'sitting': 1, 'Kool': 1, 'enormous': 1, 'subjecting': 1, 'political': 1, 'Republican': 1, 'once': 3, 'wealth': 1, 'Kurtis': 1, 'fades': 1, 'Virginia': 1, 'Arabic': 1, 'guests': 4, 'Texas': 1, 'came': 1, 'wife': 2, 'American': 2, 'stood': 1, 'crucial': 1, 'black': 19, 'The': 26, 'bag': 1, 'previous': 1, 'Where': 1, 'presidency': 2, 'second': 1, 'Dylan': 1, 'going': 1, 'Kevin': 1, 'teleprompter': 1, 'state': 1, 'posing': 1, 'classic': 1, 'that': 15, 'Bob': 1, 'flag': 1, 'invited': 3, 'enter': 1, 'Obamas': 4, 'hop': 5, 'ultimate': 1, 'disheveled': 1, 'hip': 6, 'simply': 1, 'athletes': 1, 'expand': 1, 'loud': 1, 'play': 1, 'Scouts': 1, 'burning': 1, 'strongholds': 1, 'in': 47, 'fans': 1, 'white': 2, 'Chappelle': 4, 'bamboo': 1, 'ensemble': 1, 'resplendent': 1, 'prevent': 1, 'Kennedys': 1, 'White': 10, 'Lin': 1, 'saluted': 1, 'own': 2, 'lights': 1, 'big': 1, 'performed': 1, 'three': 2, 'there': 5, 'shown': 1, 'Those': 1, 'denigrate': 1, 'De': 2, 'Y': 1, 'government': 1, 'later': 1, 'years': 2, 'danced': 1, 'faked': 1, 'word': 2, 'Ocean': 1, 'indeed': 1, 'withstanding': 1, 'Afrika': 1, 'May': 1, 'next': 4, 'affairs': 1, 'Common': 1, 'mix': 2, 'sharp': 1, 'Room': 1, 'Cellphones': 1, 'only': 2, 'standing': 1, 'large': 1, 'past': 2, 'lady': 2, 'Rhymes': 1, 'DJ': 1, 'laughing': 1, 'comedian': 1, 'these': 2, 'theme': 1, 'time': 4, 'about': 3, 'Hawaii': 1, 'begun': 1, 'symbol': 2, 'prohibition': 1, 'said': 7, 'smile': 2, 'suits': 2, 'noting': 2, 'presidents': 1, 'artists': 1, 'beat': 1, 'Cleveland': 1, 'sleeveless': 1, 'hosted': 4, 'all': 3, 'freestyled': 1, 'feel': 1, 'off': 3, 'GOP': 1, 'dark': 1, 'offices': 1, 'jewel': 1, 'Allen': 1, 'Pennsylvania': 1, 'wear': 1, 'trolley': 1, 'Happiness': 1, 'solid': 1, 'membership': 1, 'On': 1, 'trust': 1, 'art': 1, 'everyone': 2, 'saying': 1, 'famous': 2, 'Garden': 1, 'O': 1, 'Glory': 1, 'partygoer': 1, 'feeling': 1, 'crosses': 1, 'different': 1, 'embarrassed': 1, 'rally': 1, 'Nehisi': 1, 'unsuccessful': 1, 'eight': 3, 'joked': 2, 'symbols': 1, 'heels': 1, 'foundational': 1, 'ring': 2, 'Europe': 1, 'surreptitious': 1, 'crowd': 8, 'raise': 1, 'dubbed': 1, 'performances': 1, 'America': 4, 'coolly': 1, 'fervent': 1, 'up': 3, 'lovely': 1, 'usual': 1, 'Lawn': 2, 'States': 1, 'Trump': 1, 'Photograph': 1, 'small': 2, 'loudspeakers': 1, 'woman': 1, 'everyday': 1, 'glee': 1, 'triumphed': 1, 'suggest': 1, 'queue': 1, 'locker': 1, 'residence': 1, 'Frank': 1, 's': 22, 'whole': 1, 'roundly': 1, 'giant': 1, 'cracking': 1, 'credit': 1, 'night': 6, '2012': 1, 'family': 2, 'administration': 1, 'cried': 1, 'such': 2, 'names': 1, 'creator': 1, 'monopoly': 1, 'meritocratic': 1, 'Fallon': 1, 'days': 2, 'Ian': 1, 'Prayer': 1, 'import': 2, 'age': 1, 'Was': 1, 'fur': 1, 'lethargy': 1, 'told': 1, 'Rapper': 1, 'mere': 1, 'potential': 1, 'Drake': 1, 'incomparable': 1, 'formidable': 1, 'his': 14, 'John': 1, 'Manuel': 1, 'curls': 1, 'my': 1, 'him': 4, 'MAKE': 1, 'race': 1, 'history': 2, 'loafers': 1, 'rate': 1, 'greet': 1, 'reflected': 1, 'went': 1, 'I': 8, '28': 1, 'took': 2, 'Everything': 1, 'nigger': 1, 'fumed': 1, 'tweet': 1, 'privilege': 1, 'Entertainment': 1, 'pass': 1, 'are': 8, 'Women': 1, 'slight': 1, 'still': 4, 'show': 1, 'dinner': 1, 'most': 2, 'an': 4, 'moment': 1, 'welcomed': 1, 'There': 5, 'audience': 1, 'knew': 2, 'ghost': 1, 'Television': 1, 'again': 3, 'done': 1, 'another': 2, 'University': 1, 'remotely': 1, 'possible': 1, 'Confederate': 1, 'green': 1, 'treat': 1, 'cellphones': 1, 'opulence': 1, 'favorite': 1, 'ever': 1, 'Inauguration': 1, 'slaves': 1, 'coin': 1, 'remembered': 1, 'than': 2, 'shooting': 1, 'Janelle': 1, 'line': 3, 'now': 2, 'lines': 2, 'started': 1, 'style': 1, 'struck': 1, 'birthed': 1, 'farewell': 3, 'then': 8, 'Whiteness': 1, 'we': 4, 'telling': 1, 'directly': 1, 'hair': 1, 'Donald': 1, 'Hillary': 1, 'footage': 1, 'dresses': 1, 'prospect': 1, 'Ronnie': 1, 'was': 23, 'ordinary': 1, 'much': 2, 'highest': 2, 'beginning': 1, 'excellence': 1, 'shouted': 1, 'represented': 2, 'individuals': 1, 'tended': 1, 'flashed': 1, 'showcase': 1, 'concocted': 1, 'ladies': 1, 'younger': 1, 'grasp': 1, 'twist': 1, 'New': 1, 'rows': 1, 'country': 5, 'year': 3, 'everything': 1, 'earlier': 1, 'Everyone': 1, 'across': 2, 'ballad': 1, 'inscribed': 1, 'assembled': 1, 'ushered': 1, 'A': 2, 'greeted': 1, 'just': 2, 'see': 1, 'butt': 1, 'Drop': 1, 'and': 58, 'Oscar': 1, 'Much': 1, 'flourishes': 1, 'good': 2, 'boys': 1, 'Tony': 1, 'Miranda': 1, 'inevitable': 1, 'does': 1, 'awed': 1, 'shivered': 1, 'This': 6, 'Burning': 1, 'watching': 1, 'unerring': 1, 'He': 5, 'laughed': 1, 'two': 3, 'would': 6, 'LOVE': 1, 'Secret': 2, 'the': 144, 'weeks': 5, 'ideal': 1, 'contemporaries': 1, 'particular': 1, 'Monáe': 1, 'Scott': 2, 'cocktail': 1, 'communicated': 4, 'used': 1, 'Durant': 1, 'wary': 1, 'wind': 1, '43': 1, 'graceful': 1, 'string': 1, '30': 1, 'Several': 1, 'Things': 1, 'Campbell': 1, 'reform': 1, 'Polls': 1, 'Michelle': 1, 'never': 3, 'Democratic': 1, 'you': 4, 'Z': 1, 'gold': 1, 'Jay': 1, 'canceled': 1, 'day': 1, 'short': 1, 'United': 1, 'DO': 1, 'Hamilton': 1, 'others': 3, 'felt': 2, 'hummed': 1, 'front': 2, 'Great': 1, 'chops': 1, 'session': 1, 'effort': 1, 'staffers': 1, 'video': 1, 'our': 1, 'Jill': 1, 'students': 1, 'brown': 1, 'something': 1, 'complained': 1, 'media': 1, 'as': 11, 'toiled': 1, 'Light': 1, 'bunch': 1, 'almost': 2, 'minded': 1, 'for': 10, 'trolleys': 1, 'Throughout': 1, 'blue': 2, 'Usher': 1, 'perform': 1, 'wedding': 1, 'comedy': 1, 'brought': 1, 'When': 2, 'tradition': 1, 'It': 5, 'lyrics': 1, 'competition': 1, 'introducing': 1, 'put': 3, 'Bling': 1, 'set': 1, 'instead': 1, 'concert': 2, 'though': 2, 'remained': 1, 'hook': 1, 'powerful': 1, 'glorious': 1, 'longing': 1, 'way': 1, 'B': 1, 'Al': 2, 'buoy': 1, 'they': 7, 'rapper': 2, 'been': 6, 'Barack': 4, 'performance': 1, 'must': 1, 'elegance': 1, 'be': 10, 'who': 5, 'searching': 1, 'under': 2, 'professed': 1, 'test': 1, 'But': 4, 'try': 1, 'Adams': 1, 'staffer': 1, 'or': 2, 'president': 7, 'scandals': 1, 'handed': 1, 'grace': 1, 'extraordinary': 1, 'DeVoe': 2, 'room': 1, 'covers': 1, 'historical': 1, 'suit': 1, 'damn': 2, 'say': 1, 'older': 1, 'high': 3, 'Friday': 1, 'while': 1, '5': 1, 'success': 1, 'roared': 2, 'placed': 1, 'did': 4, 'refrained': 1, 'Green': 2, 'male': 1, 'perm': 1, 'but': 3, 'from': 9, 'week': 1, '2010': 1, 'In': 4, 'full': 2, 'Blind': 1, 'discuss': 1, 'Clinton': 3, 'becoming': 1, 'embedded': 1, 'will': 2, 'backgrounds': 1, 'blooming': 1, 'And': 4, 'men': 3, 'cool': 1, 'diminished': 1, 'sign': 1, 'That': 2, 'Train': 1, 'Gap': 1, 'attendance': 1, 'heard': 1, 'Not': 1, 'Chance': 1, 'main': 1, 'is': 6, 'best': 1, 'land': 1, 'actor': 1, 'seemingly': 1, 'Then': 3, 'BET': 3, 'invulnerable': 1, 'F': 1, 'Service': 2, 'guy': 1, 'genuine': 1, 'WRONG': 1, 'light': 1, 'barrage': 1, 'deadbeat': 1, 'sun': 1, 'too': 1, 'made': 1, 'pen': 2, '2011': 1, 'Stay': 1, 'Ludacris': 1, 'jumpers': 1, 'its': 1, 'trio': 1, 'preservation': 1, 'elementary': 1, 'Boys': 1, 'seat': 1, 'louder': 1, 'succession': 1, 'images': 1, 'unedited': 1, 'tonight': 1, 'right': 4, 'distance': 1, 'nominee': 1, 'strolled': 2, 'back': 5, 'inside': 1, 'chosen': 1, 'when': 2, 'reserved': 1, 'Soul': 2, 'count': 1, 'type': 1, 'come': 2, 'Williams': 2, 'Jimmy': 1, 'seniors': 1, 'National': 1, 'critics': 1, 'it': 12, 'late': 1, 'refused': 1, 'school': 1, 'surely': 1, 'couple': 2, 'victory': 2, 'Bell': 1, 'with': 15, 'people': 4, 'fill': 1, 'blond': 1, '220': 1, 'Americanness': 1, 'optional': 1, 'jeans': 1, 're': 2, 'student': 1, 'low': 1, 'South': 2, 'At': 4, 'Staples': 1, 'really': 2, 'close': 1, 'us': 2, 'actress': 1, 'Alabama': 1, 'sense': 2, 'residency': 1, 'paper': 1, 'Fitzgerald': 1, 'dads': 1, 'African': 3, 'if': 1, 'passes': 1, 'fall': 1, 'naturals': 1, 'some': 2, 'together': 1, 'pioneering': 1, 'jokes': 1, 'this': 9, 'launched': 1, 'praised': 1, 'being': 1, 'not': 12, 'eclectic': 1, 'security': 3, 'so': 1, 'other': 1, 'board': 1, 'Yolanda': 1, 'confiscated': 1, 'pussygate': 1, 'boot': 1, 'group': 2, 'ruffles': 1, 'campaigning': 1, 'Gumby': 1, 'legendary': 1, 'Hotline': 1, 'twerking': 2, 'free': 2, 'adding': 1, 'along': 1, 'stopped': 1, 'hit': 1, 'Brooklyn': 1, 'recordings': 1, 'end': 1, 'gave': 1, 'Love': 2, 'do': 4, 'into': 6, 'elevation': 1, 'dancing': 4, 'observance': 1, 'fantastic': 1, 'Make': 1, 'lit': 1, 'Legend': 1, 'victories': 1, 'Herc': 1, 'already': 1, 'opponents': 1, 'recipients': 1, 'Biv': 1, 'least': 1, 'rapture': 1, 'early': 1, 'passing': 1, 'worth': 1, 'can': 1, 'a': 49, 'fracas': 1, 'them': 1, 'humor': 1, 'insubstantial': 1, 'smart': 1, 'healthy': 1, 'leaking': 1, 'between': 1, 'Wing': 1, 'ties': 2, 'threat': 1, 'Well': 1, 'spanning': 1, 'first': 8, 'sang': 1, 'arrive': 1, 'event': 2, 'subsequent': 1, 'symbolic': 3, 'gray': 1, 'operatic': 1, 'against': 1, 'tops': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "#print(count)"
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To know the total amount of words we just need to sum alll the values that correspond to each key in the dictionary. "
    ]
   },
   {
@@ -1329,18 +1374,22 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2143"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total amount of words is: 2143\n"
+     ]
     }
    ],
    "source": [
-    "total_words"
+    "print('The total amount of words is: {}'.format(total_words))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probably you noticed that we sum over the elements of `count.values()` by doing a for loop. However, there is a way of doing this in a neat and short way. Let's use the built-in function `sum()`. "
    ]
   },
   {
@@ -1351,7 +1400,7 @@
    },
    "outputs": [],
    "source": [
-    "w = sum(count.values())"
+    "w_total = sum(count.values())"
    ]
   },
   {
@@ -1362,18 +1411,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2143"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total amount of words is: 2143\n"
+     ]
     }
    ],
    "source": [
-    "w"
+    "print('The total amount of words is: {}'.format(w_total))"
    ]
   },
   {
